--- a/Chain-Of-Responsibility/Chain-Of-Responsibility.csproj
+++ b/Chain-Of-Responsibility/Chain-Of-Responsibility.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cor\CreditRequestBase.cs" />
+    <Compile Include="Entities\Customer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
