Daha önceden kredi kartı var mı, varsa kredi kartına ait borçları ne kadar süreyle geciktirmiş? Bu geciktirme süresi 3 aydan fazla ise direkt ret ver.

--- a/Chain-Of-Responsibility/Chain-Of-Responsibility.csproj
+++ b/Chain-Of-Responsibility/Chain-Of-Responsibility.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cor\CheckKbbScore.cs" />
+    <Compile Include="Cor\CheckKreditCardPaymentTime.cs" />
     <Compile Include="Cor\CreditRequestBase.cs" />
     <Compile Include="Entities\Customer.cs" />
     <Compile Include="Program.cs" />
