Müşterinin kefili iyi mi kontrolü yapıldı

--- a/Chain-Of-Responsibility/Chain-Of-Responsibility.csproj
+++ b/Chain-Of-Responsibility/Chain-Of-Responsibility.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cor\CheckGuarantorIsFine.cs" />
     <Compile Include="Cor\CheckKbbScore.cs" />
     <Compile Include="Cor\CheckKreditCardPaymentTime.cs" />
     <Compile Include="Cor\CreditRequestBase.cs" />
