Müşterinin aylık geliri istenen krediyi ödemeye yeterli mi kontrolü yapıldı

--- a/Chain-Of-Responsibility/Chain-Of-Responsibility.csproj
+++ b/Chain-Of-Responsibility/Chain-Of-Responsibility.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Cor\CheckKbbScore.cs" />
     <Compile Include="Cor\CheckKreditCardPaymentTime.cs" />
     <Compile Include="Cor\CreditRequestBase.cs" />
+    <Compile Include="Cor\CustomersEarningsIsEnoughToPayCredit.cs" />
     <Compile Include="Entities\Customer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
